--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
 	"main": "build/index.js",
 	"scripts": {
 		"build": "wp-scripts build",
-		"format": "wp-scripts format",
-		"lint:css": "wp-scripts lint-style",
-		"lint:js": "wp-scripts lint-js",
+		"lint": "npm-run-all lint:*",
+		"lint:php": "composer lint",
+		"lint:css": "wp-scripts lint-style ./src/*.css",
+		"lint:js": "wp-scripts lint-js ./src",
+		"format": "npm-run-all format:*",
+		"format:php": "composer format",
+		"format:js": "npm run lint:js -- --fix",
+		"format:css": "npm run lint:css -- --fix",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
 		"start": "wp-scripts start",
@@ -18,9 +23,13 @@
 		"test:watch": "npm run composer test:watch",
 		"composer": "wp-env run phpunit composer --working-dir=/var/www/html/wp-content/plugins/content-machine-plugin",
 		"preinstall": "composer install"
-		},
+	},
 	"devDependencies": {
 		"@wordpress/env": "^5.8.0",
 		"@wordpress/scripts": "^25.0.0"
+	},
+	"dependencies": {
+		"npm-run-all": "^4.1.5",
+		"react": "^18.2.0"
 	}
 }
