--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@wordpress/scripts": "^25.0.0"
 	},
 	"dependencies": {
+		"@imaginary-machines/wp-admin-components": "^0.4.0",
 		"npm-run-all": "^4.1.5",
 		"react": "^18.2.0"
 	}
