--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,10 +36,7 @@ jobs:
     steps:
 
       - name: Lint PHP
-        run: npm run lint:php || true # Ignore for now.
-
-      - name: Lint PHP8
-        run: composer lint-php8
+        run: npm run lint:php
 
   test:
     name: Test PHP
