--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -7,19 +7,23 @@
 	<arg name="extensions" value="php" />
 
 	<!-- Lint all PHP files by default. -->
-	<file>.</file>
+	<file>content-machine-plugin.php</file>
+	<file>php</file>
+	<file>tests</file>
 
 	<!-- Ensure all PHP code is compatible with PHP 5.6 and higher. -->
 	<rule ref="PHPCompatibilityWP" />
 	<config name="testVersion" value="5.6-"/>
 
-	<rule ref="WordPress" />
+	<rule ref="WordPress">
+		<exclude name="WordPress.NamingConventions"/>
+		<exclude name="WordPress.Files.FileName"/>
+	</rule>
 	<rule ref="WordPress-VIP-Go" />
 
 	<!-- disable nonce checks on tests -->
 	<rule ref="WordPress.Security.NonceVerification">
 		<exclude-pattern>tests/*.php</exclude-pattern>
-		<exclude-pattern>tests/providers/*.php</exclude-pattern>
 	</rule>
 
 	<exclude-pattern>*/wordpress/*</exclude-pattern>
