--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -13,7 +13,7 @@
 
 	<!-- Ensure all PHP code is compatible with PHP 5.6 and higher. -->
 	<rule ref="PHPCompatibilityWP" />
-	<config name="testVersion" value="5.6-"/>
+	<config name="testVersion" value="7.4"/>
 
 	<rule ref="WordPress">
 		<exclude name="WordPress.NamingConventions"/>
