--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
 		"test:watch": "npm run composer test:watch",
 		"composer": "wp-env run phpunit composer --working-dir=/var/www/html/wp-content/plugins/content-machine-plugin",
 		"preinstall": "composer install",
-		"prezip:php":"composer install --no-dev -o",
-		"prezip":"npm-run-all prezip:*",
-		"prezip:js":"npm run build",
+		"prezip:php": "composer install --no-dev -o",
+		"prezip": "npm-run-all prezip:*",
+		"prezip:js": "npm run build",
 		"zip": "npm run prezip && node makeZip.js"
 	},
 	"devDependencies": {
@@ -34,6 +34,7 @@
 	},
 	"dependencies": {
 		"@imaginary-machines/wp-admin-components": "^0.4.0",
+		"@wordpress/hooks": "^3.23.0",
 		"archiver": "^5.3.1",
 		"npm-run-all": "^4.1.5",
 		"react": "^18.2.0"
