--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "content-machine-plugin",
+	"name": "ufo-ai-wp",
 	"version": "0.2.0",
 	"description": "Example block scaffolded with Create Block tool.",
 	"author": "The WordPress Contributors",
@@ -21,7 +21,7 @@
 		"env": "wp-env",
 		"test:php": "npm run composer test",
 		"test:watch": "npm run composer test:watch",
-		"composer": "wp-env run phpunit composer --working-dir=/var/www/html/wp-content/plugins/content-machine-plugin",
+		"composer": "wp-env run phpunit composer --working-dir=/var/www/html/wp-content/plugins/ufo-ai-wp",
 		"preinstall": "composer install",
 		"prezip:php": "composer install --no-dev -o",
 		"prezip": "npm-run-all prezip:*",
