--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
   },
   "autoload": {
     "psr-4": {
-      "ImaginaryMachines\\ContentMachine\\": "php/"
+      "ImaginaryMachines\\UfoAi\\": "php/"
     }
   },
   "scripts": {
