--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@wordpress/hooks": "^3.23.0",
 		"archiver": "^5.3.1",
 		"npm-run-all": "^4.1.5",
-		"react": "^18.2.0"
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
 	}
 }
