--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ufo-ai-wp",
-	"version": "0.3.2",
+	"version": "0.4.0-beta",
 	"description": "Example block scaffolded with Create Block tool.",
 	"author": "The WordPress Contributors",
 	"license": "GPL-2.0-or-later",
